added jeffs info

--- a/index.html
+++ b/index.html
@@ -87,13 +87,25 @@ description: UIKonf - Berlin's independent conference for serious iOS developers
 		        </div>
 		      </div>
 	      </div>
+		 
+       	<div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
+     		<div class="box">
+     			<figure class="uk-overlay uk-overlay-hover">
+		    		<img class="uk-overlay-spin" src="{{ site.baseurl }}/static/images/jeff-watkins.jpg" alt="Jeff Watkins">
+   				    <a class="uk-position-cover" href="/speakers#jeff"></a>
+   					</figure>
+   	        <div class="info-box">
+		     	<h4>Jeff Watkins</h4>
+   	            <p><small>Jeff runs a non-profit supporting organisations to increase diversity in the technology industry.</small></p>
+   	        </div>
+   	      </div>
+         </div>
 		  
     	<div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
   		<div class="box">
   			<figure class="uk-overlay uk-overlay-hover">
 				    <img src="/static/images/you.png" alt="Speak at UIKonf">
-				    <a class="uk-position-cover" href="/speakers#daniel"></a>
-					</figure>
+				</figure>
 	        <div class="info-box">
 	            <h4>You?</h4>
 	            <p><small>You can speak at UIKonf, too. We will open our anonymous call for proposals soon.</small></p>
@@ -102,6 +114,7 @@ description: UIKonf - Berlin's independent conference for serious iOS developers
       </div>
     </div>
   </div>
+</div>
 </div>
 </div>
 
