--- a/index.html
+++ b/index.html
@@ -100,7 +100,20 @@ description: UIKonf - Berlin's independent conference for serious iOS developers
    	        </div>
    	      </div>
          </div>
-		  
+		
+       	<div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
+     		<div class="box">
+     			<figure class="uk-overlay uk-overlay-hover">
+		    		<img class="uk-overlay-spin" src="{{ site.baseurl }}/static/images/emily-toop.jpg" alt="Emily Toop">
+   				    <a class="uk-position-cover" href="/speakers#emily"></a>
+   					</figure>
+   	        <div class="info-box">
+		     	<h4>Emily Toop</h4>
+   	            <p><small>Emily is a developer at Mozilla, working on Firefox for iOS.</small></p>
+   	        </div>
+   	      </div>
+         </div>
+		   
     	<div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
   		<div class="box">
   			<figure class="uk-overlay uk-overlay-hover">
