--- a/index.html
+++ b/index.html
@@ -150,7 +150,13 @@ redirect_from:
         <h2 class="brand-color">Call for Proposals</h2>
 	</div>
     <div class="uk-width-1-1 uk-margin-large-bottom">
-		Contribute to UIKonf 2016 by proposing and / or selecting talks through <a href="http://cfp.uikonf.com/about" target="_blank">our vestibule</a>. Talks should be no longer than 30 minutes plus discussion time. Please <strong>do not </strong>include a bio or link to your personal profiles. We want to keep the process as anonymous as possible. The proposal process consists of three steps:
+		Contribute to UIKonf 2016 by proposing and / or selecting talks through <a href="http://cfp.uikonf.com/the-vestibule-process" target="_blank">our vestibule</a>. Talks should be no longer than 30 minutes plus discussion time. Please <strong>do not </strong>include a bio or link to your personal profiles. We want to keep the process as anonymous as possible. The rules in short:
+		<ul>
+			<li>Please submit only <strong>one proposal per person</strong>.</li>
+			<li>Talks should be no longer than <strong>30 minutes</strong> plus discussion time.</li>
+			<li>Please <strong>do not </strong>include a bio or link to your personal profiles. We want to keep the process as anonymous as possible. We do understand though that the topic of your talk might give away some hints of who you are. There is no need to go to ridiculous lengths to conceal your identity if it makes the proposal more difficult to write</li>
+		</ul>
+		<p>The proposal process consists of three steps:</p>
 	  </div>
 
       	<div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3 uk-margin-large-bottom">
