link to refunds

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ redirect_from:
         <div class="uk-width-1-1 uk-text-center">
           <h2 class="brand-color">Tickets</h2>
           <p><tito-widget event="uikonf/uikonf-2016"></tito-widget></p>
-    		  <p>Ticket prices exclude VAT (MwSt.) but include free drinks, lunch on the conference days and the UIKonf party.</p>
+    		  <p>Ticket prices exclude VAT (MwSt.) but include free drinks, lunch on the conference days and the UIKonf party. <a href="refunds">Our Refunds Policy</a></p>
         </div>
 	  </div>
    </div>
