add info about laura and charles

--- a/index.html
+++ b/index.html
@@ -119,6 +119,32 @@ redirect_from:
    	        </div>
    	      </div>
          </div>
+		 
+        	<div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
+      		<div class="box">
+      			<figure class="uk-overlay uk-overlay-hover">
+ 		    		<img class="uk-overlay-spin" src="{{ site.baseurl }}/static/images/laura-savino.jpg" alt="Laura Savino"/>
+    				    <a class="uk-position-cover" href="/speakers#laura"></a>
+    					</figure>
+    	        <div class="info-box">
+ 		     	<h4>Laura Savino</h4>
+    	            <p><small>Laura is an iOS developer with a passion for human languages, teaching, and song.</small></p>
+    	        </div>
+    	      </div>
+          </div>
+		  
+         	<div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
+       		<div class="box">
+       			<figure class="uk-overlay uk-overlay-hover">
+  		    		<img class="uk-overlay-spin" src="{{ site.baseurl }}/static/images/charles-perry.jpg" alt="Charles Perry"/>
+     				    <a class="uk-position-cover" href="/speakers#charles"></a>
+     					</figure>
+     	        <div class="info-box">
+  		     	<h4>Charles Perry</h4>
+     	            <p><small>Charles Perry is the owner of Metakite Software and co-host of Release Notes podcast.</small></p>
+     	        </div>
+     	      </div>
+           </div>
 
     	<div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
   		<div class="box">
