--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@ redirect_from:
  - /scholarship/
  - /tickets/
  - /venue.html
- - /workshops/
 ---
 <div class="headerimage" style="background-image: url({{ site.baseurl }}/static/images/img-home.jpg);" data-uk-parallax="{bg: '-50'}">
    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
@@ -295,6 +294,7 @@ redirect_from:
                         <div class="uk-width-medium-4-6 uk-width-1-1">
                           <h3 class="brand-color">Hackathon, workshops and more!</h3>
                           <p><small>In addition to taking part in the hackathon you can meet our sponsors, dissect code problems with selected experts or just hang out and code with new friends.</small></p>
+						  <p><small>Check out our <a href="/workshops">workshop page</a> for more information.</small></p>
 						              <p><small>Do you want to hold a workshop or sponsor a hackathon prize, <a href="mailto:questions@uikonf.com">get in touch with us</a>.</small></p>
                         </div>
                       </div>
@@ -393,6 +393,23 @@ redirect_from:
 	  </div>
     </div>
 	</div>
+</div>
+
+<div class="straight">
+  <div class="uk-container uk-container-center">
+    <div class="uk-grid uk-grid-small">
+      <div class="uk-width-medium-4-10">
+        <a name="Sponsors"></a> 
+        <h2 class="uk-margin-large-top">Sponsors</h2>
+      </div>
+      </div>
+      <div class="box uk-width-medium-1-2 uk-width-large-1-3">
+			<figure class="uk-overlay uk-overlay-hover">
+			    <img src="/static/images/GrandCentrix.png" alt="GrandCentrix">
+			</figure>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="straight brand-color">
