add workshop page for DS

--- a/workshops.html
+++ b/workshops.html
@@ -20,41 +20,7 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
    </div>
 </div>
 
-<div class="backshape">
-	<div class="wrapper">
-		<div class="uk-container uk-container-center uk-margin-large-top">
-    		<div class="uk-grid">
-	    	<div class="uk-width-medium-1-3 uk-width-small-1-1 uk-width-large-1-3">
-      		<a name="advanced-swift"></a>
-			<div class="box">
-      			<figure class="uk-overlay uk-overlay-hover">
-			        <img src="{{ site.baseurl }}/static/images/daniel-steinberg.jpg" alt="Advanced Swift by Daniel Steinberg">
-						</figure>
-		        <div class="info-box">
-		          <h4>Advanced Swift Workshop</h4>
-		        </div>
-		      </div>
-	      	</div>
-
-	     	 <div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
-	       	 	<h3>Thinking in Swift - Understanding the Patterns of Programming in Swift</h3>
-				<p>Instructor: Daniel Steinberg of dimsumthinking.com</p>
-<p>Date: Saturday, May 21st</p>
-
-<p>This fast-paced workshop shows you how to take advantage of Swift features to write more robust code that is easier to reason about. We'll spend a good part of the day looking at functional programming and playing with map, filter, reduce, and flatmap but we will also create instances of classes, structs, and enums. We'll explore how your iOS app architecture may change when you embrace idiomatic Swift.</p>
-<p>One of the strengths of Swift is that it can borrow the best from a multitude of paradigms. We'll look at how to successfully weave together OO and functional code into a readable and flexible architecture and focus on protocol oriented programming.
-</p>
-
-<p>Prerequisites: We assume that you are an experienced programmer who has spent some time looking at Swift but you aren't yet an expert in Swift. You understand most of the hows and whats of working with Swift and are looking for the whys and wheres. You need a Mac running Yosemite or El Capitan with the latest publicly shipping version of Xcode 7.x installed.</p>
-<p>Duration: approx. 8h</p>
-<p>Fee: 150 € - You don't need a UIKonf ticket to attend this workshop.</p>
-	      	</div>
-	  		</div>
-		</div>
-	</div>
-</div>
-
-<div class="backshape light-grey opposite">
+<div class="backshape light-grey">
 	<div class="wrapper">
 		<div class="uk-container uk-container-center uk-margin-large-top">
     		<div class="uk-grid">
