--- a/workshops.html
+++ b/workshops.html
@@ -73,7 +73,7 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
 
 	     	 <div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
 	       	 	<h3>Test Driven Development in Swift</h3>
-				<p>Instructor: Pawel Dudec of mobile-academy.io</p>
+				<p>Instructor: Pawel Dudek of mobile-academy.io</p>
 <p>Date: Wednesday, May 25th</p>
 
 <p>Agenda: Starting your adventure with testing is not an easy task. You know this if you ever started writing tests on your own - you wrote some, but they were more of a burden rather than salvation. Fragile to change, long and hard to understand. </p>
@@ -101,7 +101,7 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
 	<div class="wrapper">
 		<div class="uk-container uk-container-center uk-margin-large-top">
 	    	<div class="uk-width-1-1">
-	      		<p>In addition to these workshop, the last day of UIKonf will host an unconference-like get-together where everyone can share their knowledge in self-organized labs.</p>
+	      		<p>In addition to these workshops, the last day of UIKonf will host an unconference-like get-together where everyone can share their knowledge in self-organized labs.</p>
 	  		</div>
 		</div>
 	</div>
