Tickets available soon

--- a/workshops.html
+++ b/workshops.html
@@ -47,7 +47,7 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
 
 <p>Prerequisites: This workshop is not for newcomers to Core Data. We assume that you have a basic understanding of Core Data’s API.</p>
 <p>Duration: approx. 3h</p>
-<p>Fee: 50 €</p>
+<p>Fee: 50 € - Tickets will be available soon</p>
 	      	</div>
 	  		</div>
 		</div>
@@ -90,7 +90,7 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
 <li>Humor and hunger for knowledge!</li>
 </ul>
 <p>Duration: approx. 3h</p>
-<p>Fee: 50 €</p>
+<p>Fee: 50 € - Tickets will be available soon</p>
 	      	</div>
 	  		</div>
 		</div>
