--- a/workshops.html
+++ b/workshops.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+order: 2
 title: Workshops
 permalink: /workshops/
-description: UIKonf 2016 - Workshops on Wednesday 25th
+description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 ---
 
 <div class="headerimage uk-position-relative" style="background-image: url({{ site.baseurl }}/static/images/speakers-header-cropped.jpg);" data-uk-parallax="{bg: '-50'}">
@@ -20,6 +21,47 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
    </div>
 </div>
 
+<div class="backshape">
+	<div class="wrapper">
+		<div class="uk-container uk-container-center uk-margin-large-top">
+    		<div class="uk-grid">
+	    	<div class="uk-width-medium-1-3 uk-width-small-1-1 uk-width-large-1-3">
+      		<a name="swift"></a>
+			<div class="box">
+      			<figure class="uk-overlay uk-overlay-hover">
+			        <img src="{{ site.baseurl }}/static/images/daniel-steinberg.jpg" alt="Core Data">
+						</figure>
+		        <div class="info-box small">
+		          <h4>Advanced Swift Workshop</h4>
+		        </div>
+		      </div>
+	      	</div>
+
+	     	 <div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
+	       	 	<h3>Understanding the Patterns of Programming in Swift</h3>
+				<p>Instructor: <a href="/speakers#daniel">Daniel Steinberg</a> of <a href="http://dimsumthinking.com" target="_blank">dimsumthinking.com</a></p>
+<p>Date: Saturday, May 21st</p>
+
+<p>This fast-paced workshop shows you how to take advantage of Swift features to write more robust code that is easier to reason about. We'll spend a good part of the day looking at functional programming and playing with map, filter, reduce, and flatmap but we will also create instances of classes, structs, and enums. We'll explore how your iOS app architecture may change when you embrace idiomatic Swift.</p>
+
+<p>One of the strengths of Swift is that it can borrow the best from a multitude of paradigms. We'll look at how to successfully weave together OO and functional code into a readable and flexible architecture and focus on protocol oriented programming.</p>
+
+<p>Prerequisites: We assume that you are an experienced programmer who has spent some time looking at Swift but you aren't yet an expert in Swift. You understand most of the hows and whats of working with Swift and are looking for the whys and wheres. You need a Mac running Yosemite or El Capitan with the latest publicly shipping version of Xcode 7.x installed.</p>
+
+<p>Duration: approx. 8h (Note this workshop is on Saturday!)</p>
+
+<p>Fee: 150 € - You don't need a UIKonf ticket to attend this workshop.</p>
+
+<div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
+		<a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="https://ti.to/uikonf/thinking-in-swift/with/nxtgihxgmmy" target="_blank" alt="Swift Thinking Workshop Tickets">Book a Ticket</a>
+</div>
+	      	</div>
+	  		</div>
+		</div>
+	</div>
+</div>
+
+
 <div class="backshape light-grey">
 	<div class="wrapper">
 		<div class="uk-container uk-container-center uk-margin-large-top">
@@ -30,7 +72,7 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
       			<figure class="uk-overlay uk-overlay-hover">
 			        <img src="{{ site.baseurl }}/static/images/core-data.jpg" alt="Core Data">
 						</figure>
-		        <div class="info-box">
+		        <div class="info-box small">
 		          <h4>Core Data Workshop</h4>
 		        </div>
 		      </div>
@@ -47,7 +89,8 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
 
 <p>Prerequisites: This workshop is not for newcomers to Core Data. We assume that you have a basic understanding of Core Data’s API.</p>
 <p>Duration: approx. 3h</p>
-<p>Fee: 50 € - Tickets will be available soon</p>
+<p>Fee: 50 €</p>
+<p>Tickets are currently only available for UIKonf ticket holders. Check your registration confirmation or contact us with your booking reference. Public sale for the remaining tickets start May 1st.</p>
 	      	</div>
 	  		</div>
 		</div>
@@ -65,7 +108,7 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
       			<figure class="uk-overlay uk-overlay-hover">
 			        <img src="{{ site.baseurl }}/static/images/swift-tdd.jpg" alt="Swift TDD">
 						</figure>
-		        <div class="info-box">
+		        <div class="info-box small">
 		          <h4>Swift TDD Workshop</h4>
 		        </div>
 		      </div>
@@ -90,7 +133,8 @@ description: UIKonf 2016 - Workshops on Wednesday 25th
 <li>Humor and hunger for knowledge!</li>
 </ul>
 <p>Duration: approx. 3h</p>
-<p>Fee: 50 € - Tickets will be available soon</p>
+<p>Fee: 50 €</p>
+<p>Tickets are currently only available for UIKonf ticket holders. Check your registration confirmation or contact us with your booking reference. Public sale for the remaining tickets start May 1st.</p>
 	      	</div>
 	  		</div>
 		</div>
