add ticket links

--- a/workshops.html
+++ b/workshops.html
@@ -90,7 +90,7 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 <p>Prerequisites: This workshop is not for newcomers to Core Data. We assume that you have a basic understanding of Core Data’s API.</p>
 <p>Duration: approx. 3h</p>
 <p>Fee: 50 €</p>
-<p>Tickets are currently only available for UIKonf ticket holders. Check your registration confirmation or contact us with your booking reference. Public sale for the remaining tickets start May 1st.</p>
+		<p><a href="https://ti.to/uikonf/uikonf-2016/with/sepdt6oua2a" target="_blank">Book a ticket</a></p>
 	      	</div>
 	  		</div>
 		</div>
@@ -134,7 +134,8 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 </ul>
 <p>Duration: approx. 3h</p>
 <p>Fee: 50 €</p>
-<p>Tickets are currently only available for UIKonf ticket holders. Check your registration confirmation or contact us with your booking reference. Public sale for the remaining tickets start May 1st.</p>
+		<p><a href="https://ti.to/uikonf/uikonf-2016/with/43kxerqjnkg" target="_blank">Book a ticket</a></p>
+
 	      	</div>
 	  		</div>
 		</div>
