--- a/workshops.html
+++ b/workshops.html
@@ -90,7 +90,9 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 <p>Prerequisites: This workshop is not for newcomers to Core Data. We assume that you have a basic understanding of Core Data’s API.</p>
 <p>Duration: approx. 3h</p>
 <p>Fee: 50 €</p>
-		<p><a href="https://ti.to/uikonf/uikonf-2016/with/sepdt6oua2a" target="_blank">Book a ticket</a></p>
+<div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
+		<a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="https://ti.to/uikonf/uikonf-2016/with/sepdt6oua2a" target="_blank">Book a Ticket</a>
+</div>
 	      	</div>
 	  		</div>
 		</div>
@@ -134,7 +136,9 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 </ul>
 <p>Duration: approx. 3h</p>
 <p>Fee: 50 €</p>
-		<p><a href="https://ti.to/uikonf/uikonf-2016/with/43kxerqjnkg" target="_blank">Book a ticket</a></p>
+<div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
+		<a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="https://ti.to/uikonf/uikonf-2016/with/43kxerqjnkg" target="_blank">Book a Ticket</a>
+</div>
 
 	      	</div>
 	  		</div>
