--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@ redirect_from:
   </div>
 </div>
 
-<div class="backshape opposite relative">
+<div class="backshape opposite relative" style="clear:both;"> 
 </div>
 
 <div class="backshape opposite relative">
   <div class="wrapper">
-        <div class="uk-width-medium-6-10 uk-container-center">
+        <div class="uk-container uk-width-medium-6-10 uk-container-center">
           <div class="uk-grid">
             <div class="uk-width-1-1 uk-text-center">
               <h2 class="brand-color">Schedule</h2>
