add sponsors, update workshop information

--- a/index.html
+++ b/index.html
@@ -136,15 +136,24 @@ redirect_from:
 
 <div class="straight">
   <div class="uk-container uk-container-center">
-    <div class="uk-grid uk-grid-small">
-      <div class="uk-width-medium-4-10">
+    <div class="uk-grid">
+        <div class="uk-width-1-1 uk-text-center">
         <a name="Sponsors"></a> 
-        <h2 class="uk-margin-large-top">Sponsors</h2>
-      </div>
-      </div>
+        <h2 class="brand-color uk-margin-large-top">Sponsors</h2>
+       </div>
       <div class="box uk-width-medium-1-2 uk-width-large-1-3">
 			<figure class="uk-overlay uk-overlay-hover">
 			    <a href="https://www.grandcentrix.net/" target="_blank"><img src="/static/images/GrandCentrix.png" alt="GrandCentrix"></a>
+			</figure>
+      </div>
+      <div class="box uk-width-medium-1-2 uk-width-large-1-3">
+			<figure class="uk-overlay uk-overlay-hover">
+			    <a href="https://careers.microsoft.com/" target="_blank"><img src="/static/images/Microsoft_logo.png" alt="Microsoft"></a>
+			</figure>
+      </div>
+      <div class="box uk-width-medium-1-2 uk-width-large-1-3">
+			<figure class="uk-overlay uk-overlay-hover">
+			    <a href="https://careers.sky.com/" target="_blank"><img src="/static/images/sky_logo.png" alt="Sky"></a>
 			</figure>
       </div>
     </div>
