--- a/workshops.html
+++ b/workshops.html
@@ -48,6 +48,7 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 
 <p>Prerequisites: We assume that you are an experienced programmer who has spent some time looking at Swift but you aren't yet an expert in Swift. You understand most of the hows and whats of working with Swift and are looking for the whys and wheres. You need a Mac running Yosemite or El Capitan with the latest publicly shipping version of Xcode 7.x installed.</p>
 
+<p>Start: 10am</p>
 <p>Duration: approx. 8h (Note this workshop is on Saturday!)</p>
 
 <p>Fee: 150 € - You don't need a UIKonf ticket to attend this workshop.</p>
@@ -61,46 +62,7 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 	</div>
 </div>
 
-
-<div class="backshape light-grey">
-	<div class="wrapper">
-		<div class="uk-container uk-container-center uk-margin-large-top">
-    		<div class="uk-grid">
-	    	<div class="uk-width-medium-1-3 uk-width-small-1-1 uk-width-large-1-3">
-      		<a name="coredata"></a>
-			<div class="box">
-      			<figure class="uk-overlay uk-overlay-hover">
-			        <img src="{{ site.baseurl }}/static/images/core-data.jpg" alt="Core Data">
-						</figure>
-		        <div class="info-box small">
-		          <h4>Core Data Workshop</h4>
-		        </div>
-		      </div>
-	      	</div>
-
-	     	 <div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
-	       	 	<h3>Understanding Core Data Performance and Concurrency</h3>
-				<p>Instructors: Daniel Eggert and Florian Kugler of objc.io</p>
-<p>Date: Wednesday, May 25th</p>
-
-<p>Agenda: The key to using Core Data successfully is an in-depth understanding of its architecture. Together with Daniel and Florian you will take a deep dive into this flexible and powerful framework to enable you to make the best choices for your project: how to setup the stack, how to implement a clean concurrency model, and how to tackle performance problems.</p>
-
-<p>Next to the workshop itself each participant gets a copy of the <a href="https://www.objc.io/books/core-data" target="_blank">Core Data eBook</a>.</p>
-
-<p>Prerequisites: This workshop is not for newcomers to Core Data. We assume that you have a basic understanding of Core Data’s API.</p>
-<p>Duration: approx. 3h</p>
-<p>Fee: 50 €</p>
-<div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
-		<a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="https://ti.to/uikonf/uikonf-2016/with/sepdt6oua2a" target="_blank">Book a Ticket</a>
-</div>
-	      	</div>
-	  		</div>
-		</div>
-	</div>
-</div>
-
-
-<div class="backshape opposite">
+<div class="backshape ligth-grey">
 	<div class="wrapper">
 		<div class="uk-container uk-container-center uk-margin-large-top">
     		<div class="uk-grid">
@@ -134,12 +96,52 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 <li>Although not required AppCode is recommended - we’ll be heavily relying on its refactoring capabilities</li>
 <li>Humor and hunger for knowledge!</li>
 </ul>
+<p>Start: 10am</p>
 <p>Duration: approx. 3h</p>
 <p>Fee: 50 €</p>
 <div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
 		<a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="https://ti.to/uikonf/uikonf-2016/with/43kxerqjnkg" target="_blank">Book a Ticket</a>
 </div>
 
+	      	</div>
+	  		</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="backshape opposite">
+	<div class="wrapper">
+		<div class="uk-container uk-container-center uk-margin-large-top">
+    		<div class="uk-grid">
+	    	<div class="uk-width-medium-1-3 uk-width-small-1-1 uk-width-large-1-3">
+      		<a name="coredata"></a>
+			<div class="box">
+      			<figure class="uk-overlay uk-overlay-hover">
+			        <img src="{{ site.baseurl }}/static/images/core-data.jpg" alt="Core Data">
+						</figure>
+		        <div class="info-box small">
+		          <h4>Core Data Workshop</h4>
+		        </div>
+		      </div>
+	      	</div>
+
+	     	 <div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
+	       	 	<h3>Understanding Core Data Performance and Concurrency</h3>
+				<p>Instructors: Daniel Eggert and Florian Kugler of objc.io</p>
+<p>Date: Wednesday, May 25th</p>
+
+<p>Agenda: The key to using Core Data successfully is an in-depth understanding of its architecture. Together with Daniel and Florian you will take a deep dive into this flexible and powerful framework to enable you to make the best choices for your project: how to setup the stack, how to implement a clean concurrency model, and how to tackle performance problems.</p>
+
+<p>Next to the workshop itself each participant gets a copy of the <a href="https://www.objc.io/books/core-data" target="_blank">Core Data eBook</a>.</p>
+
+<p>Prerequisites: This workshop is not for newcomers to Core Data. We assume that you have a basic understanding of Core Data’s API.</p>
+<p>Start: 1pm</p>
+<p>Duration: approx. 3h</p>
+<p>Fee: 50 €</p>
+<div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
+		<a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="https://ti.to/uikonf/uikonf-2016/with/sepdt6oua2a" target="_blank">Book a Ticket</a>
+</div>
 	      	</div>
 	  		</div>
 		</div>
