--- a/workshops.html
+++ b/workshops.html
@@ -128,7 +128,7 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 
 	     	 <div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
 	       	 	<h3>Understanding Core Data Performance and Concurrency</h3>
-				<p>Instructors: Daniel Eggert and Florian Kugler of objc.io</p>
+				<p>Instructor: Florian Kugler of objc.io</p>
 <p>Date: Wednesday, May 25th</p>
 
 <p>Agenda: The key to using Core Data successfully is an in-depth understanding of its architecture. Together with Daniel and Florian you will take a deep dive into this flexible and powerful framework to enable you to make the best choices for your project: how to setup the stack, how to implement a clean concurrency model, and how to tackle performance problems.</p>
