--- a/workshops.html
+++ b/workshops.html
@@ -46,7 +46,7 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 	      	<div class="uk-width-medium-2-3 uk-width-small-1-1 uk-width-large-2-3" style="padding-top:10px;">
 				<h3>{{ workshop.title }}</h3>
 				<p>Presenter: {{ workshop.presenter }}<br/>
-					Date: {{ workshop.date }}<br/>
+					Date: {{ workshop.presentationDate }}<br/>
 					Time: {{ workshop.time }}<br/>
 					Duration: {{ workshop.duration }}<br/>
 					Fee: {{ workshop.fee }}</p>
