--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ redirect_from:
         <div class="uk-width-medium-8-10 uk-container-center">
           <div class="uk-grid">
             <div class="uk-width-1-1">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/JbIoI7sm4_o" frameborder="0" allowfullscreen></iframe>
+              <br>
+              Live-captioning available under: https://www.streamtext.net/player?event=UIKonf
               <h1>About UIKonf</h1>
             </div>
             <div class="uk-width-medium-1-2">
