--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@ redirect_from:
    </div>
 </div>
 
+<div class="backshape opposite light-grey">
+<div class="wrapper">	
+  <div class="uk-container uk-container-center">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/JbIoI7sm4_o" frameborder="0" allowfullscreen></iframe>
+              <p>Live-captioning available under: https://www.streamtext.net/player?event=UIKonf</p>
+            </div>
+          </div>
+        </div>
+        
+
 <div class="backshape brand-color">
   <div class="wrapper">
     <div class="uk-container uk-container-center">
@@ -24,9 +34,6 @@ redirect_from:
         <div class="uk-width-medium-8-10 uk-container-center">
           <div class="uk-grid">
             <div class="uk-width-1-1">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/JbIoI7sm4_o" frameborder="0" allowfullscreen></iframe>
-              <br>
-              Live-captioning available under: https://www.streamtext.net/player?event=UIKonf
               <h1>About UIKonf</h1>
             </div>
             <div class="uk-width-medium-1-2">
