--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ redirect_from:
    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
       <div class="teaser-register">
        <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf">
-        <a class="btn uk-button-large">We are sold out!</a>
         <p>22 - 25 May 2016   <a href="#Location"><i class="uk-icon-map-o"></i> Heimathafen, Berlin</a></p>
      </div>
    </div>
@@ -21,7 +20,7 @@ redirect_from:
 <div class="wrapper">	
   <div class="uk-container uk-container-center">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/JbIoI7sm4_o" frameborder="0" allowfullscreen></iframe>
-              <p>Live-captioning available under: https://www.streamtext.net/player?event=UIKonf</p>
+              <p>Live-captioning available <a href="https://www.streamtext.net/player?event=UIKonf" target=blank>here</a>.</p>
             </div>
           </div>
         </div>
