--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ redirect_from:
     <table border="0" cellspacing="5" cellpadding="5">
       <tr><td>              <iframe width="560" height="315" src="https://www.youtube.com/embed/JbIoI7sm4_o" frameborder="0" allowfullscreen></iframe>
               <p>Live-captioning available <a href="https://www.streamtext.net/player?event=UIKonf" target=blank>here</a>.</p>
-</td></tr>
-      <tr><td>              <iframe frameborder="0" marginheight="0" marginwidth="0" src="https://www.betterplace.org/de/fundraising-events/28402-uikonf-for-displaced-families-in-syria/widget" width="160" height="260" style="border: 0; padding:0; margin:0;">Informieren und spenden: <a href='https://www.betterplace.org/de/fundraising-events/28402-uikonf-for-displaced-families-in-syria/widget' target='_blank'>„UIKonf for Displaced Families in Syria“</a> auf betterplace.org öffnen.</iframe>
+</td><td>              <iframe frameborder="0" marginheight="0" marginwidth="0" src="https://www.betterplace.org/de/fundraising-events/28402-uikonf-for-displaced-families-in-syria/widget" width="160" height="260" style="border: 0; padding:0; margin:0;">Informieren und spenden: <a href='https://www.betterplace.org/de/fundraising-events/28402-uikonf-for-displaced-families-in-syria/widget' target='_blank'>„UIKonf for Displaced Families in Syria“</a> auf betterplace.org öffnen.</iframe>
 </td></tr>
     </table>
             </div>
