Display workshop location

--- a/workshops.html
+++ b/workshops.html
@@ -47,6 +47,7 @@ description: UIKonf 2016 - Workshops and Unconference on Wednesday 25th May
 				<h3>{{ workshop.title }}</h3>
 				<p>Presenter: {{ workshop.presenter }}<br/>
 					Date: {{ workshop.presentationDate }}<br/>
+					Location: {{ workshop.location }}<br/>
 					Time: {{ workshop.time }}<br/>
 					Duration: {{ workshop.duration }}<br/>
 					Fee: {{ workshop.fee }}</p>
