--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ redirect_from:
       <div class="teaser-register">
        <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf">
         <p>May 14th – 17th, 2017   <a href="#Location"><i class="uk-icon-map-o"></i> Kosmos, Berlin</a></p>
+        <a class="btn uk-button-large" href="https://ti.to/uikonf/uikonf-2017">Register now</a>
      </div>
    </div>
 </div>
