--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ redirect_from:
 			<p><tito-widget event="uikonf/uikonf-2017"></tito-widget></p> 
 		 		<p>Ticket prices include VAT (MwSt.), free drinks, lunch on the conference days and the UIKonf party. See <a href="refunds">our refunds policy</a> if you are not sure about your plans in May.
 				</p>
-				<p>We also supply diversity tickets aimed to help underrepresented groups in tech. This includes but isn’t limited to: women, people of colour, LGBTQIA+ people, disabled people and generally people who are unable to attend without financial assistance. If you think you are eligible for a diversity ticket, simply <a href="https://docs.google.com/forms/d/1S_bA3XfRXOaTe6_8xZ1yGenmTeu_QKr904xNH2ab9jY/edit" target="_blank">fill out the application form</a>.</p>
+				<p>We also provide discounted diversity tickets for 99€, aimed to help underrepresented groups in tech. This includes but isn’t limited to: women, people of colour, LGBTQIA+ people, disabled people and generally people who are unable to attend without financial assistance. If you think you are eligible for a diversity ticket, simply <a href="https://docs.google.com/forms/d/1S_bA3XfRXOaTe6_8xZ1yGenmTeu_QKr904xNH2ab9jY/edit" target="_blank">fill out the application form</a>.</p>
 				<p>If you want to support diversity at UIKonf, you can do so when booking your ticket. Simply select the additional "Scholarship Sponsor" package which provides one ticket for our diversity ticket applicants.</p>
 			</div>
         </div>
