Link CfP in content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ redirect_from:
         <h2 class="brand-color">Speakers</h2>
     </div>
       <div class="uk-width-1-1 uk-margin-large-bottom">
-        <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our anonymous call for proposals. (Details to be announced soon…)</p>
+        <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our anonymous call for proposals. To submit your talk, visit our <a href="http://cfp.uikonf.com/about" target="_blank">Call for Proposals</a>.</p>
       </div>
 
 {% for speaker in site.speakers %}
