Add workshops and new speakers

--- a/workshops.html
+++ b/workshops.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 order: 2
+title: Workshops
 permalink: /workshops/
-description: UIKonf 2017 - Workshops and Unconference on Wednesday 25th May
+description: UIKonf 2017 - Workshops and Unconference on Saturday 13th and Wednesday 17th May
 ---
 
 <div class="headerimage uk-position-relative" style="background-image: url({{ site.baseurl }}/static/images/speakers-header-cropped.jpg);" data-uk-parallax="{bg: '-50'}">
@@ -65,7 +66,7 @@ description: UIKonf 2017 - Workshops and Unconference on Wednesday 25th May
 	<div class="wrapper">
 		<div class="uk-container uk-container-center uk-margin-large-top">
 	    	<div class="uk-width-1-1">
-	      		<p>In addition to these workshops, the last day of UIKonf will host an unconference-like get-together where everyone can share their knowledge in self-organized labs.</p>
+	      		<p>In addition to these workshops, the last day of UIKonf will host an unconference-like get-together where everyone can share their knowledge in self-organized labs. If you want to offer a workshop as well, <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>.</p>
 	  		</div>
 		</div>
 	</div>
