Fix workshop image link

--- a/workshops.html
+++ b/workshops.html
@@ -36,7 +36,7 @@ description: UIKonf 2017 - Workshops and Unconference on Saturday 13th and Wedne
       			<div class="box">
       				<figure class="uk-overlay uk-overlay-hover">
 			    		<img class="uk-overlay" src="{{ site.baseurl }}/static/images/{{ workshop.image }}" alt="{{ workshop.title }}">
-							<a class="uk-position-cover" href="{{ speaker.twitter }}" target="_blank"></a>
+							<a class="uk-position-cover" href="{{ workshop.twitter }}" target="_blank"></a>
 					</figure>
 		     		<div  class="info-box small">
 		     			 <h4>{{ workshop.shortTitle }}</h4>
