Update last speakers

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ redirect_from:
         <h2 class="brand-color">Speakers</h2>
     </div>
       <div class="uk-width-1-1 uk-margin-large-bottom">
-        <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our anonymous call for proposals. <a href="http://cfp.uikonf.com/about" target="_blank">Our Call for Proposals</a> is now closed. We will announce selected speakers and their talks on a rollling basis.</p>
+        <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our speakers. The other half will be selected by our community through our anonymous call for proposals. This is the final speaker list:</p>
       </div>
 
 {% for speaker in site.speakers %}
@@ -88,8 +88,7 @@ redirect_from:
 			<p><tito-widget event="uikonf/uikonf-2017"></tito-widget></p> 
 		 		<p>Ticket prices include VAT (MwSt.), free drinks, lunch on the conference days and the UIKonf party. See <a href="refunds">our refunds policy</a> if you are not sure about your plans in May.
 				</p>
-				<p>We also provide discounted diversity tickets for 99€, aimed to help underrepresented groups in tech. This includes but isn’t limited to: women, people of colour, LGBTQIA+ people, disabled people and generally people who are unable to attend without financial assistance. If you think you are eligible for a diversity ticket, simply <a href="https://goo.gl/forms/E02529wutoMOyB2S2" target="_blank">fill out the application form</a>.</p>
-				<p>If you want to support diversity at UIKonf, you can do so when booking your ticket. Simply select the additional "Scholarship Sponsor" package which provides one ticket for our diversity ticket applicants.</p>
+				<p>We also provide discounted diversity tickets for 99€, aimed to help underrepresented groups in tech. If you applied for one and haven't heard from us yet, please <a href="mailto:questions@uikonf.com" target="_blank">contact us</a>.</p>
 			</div>
         </div>
      </div>
