--- a/index.html
+++ b/index.html
@@ -100,15 +100,17 @@ redirect_from:
         <div class="uk-container uk-width-medium-6-10 uk-container-center">
           <div class="uk-grid">
             <div class="uk-width-1-1 uk-text-center">
+	      <a name="schedule"></a>
               <h2 class="brand-color">Schedule</h2>
             </div>
-        {% include schedule.md context="schedule" %}
+        	{% include schedule.md context="schedule" %}
           </div>
         </div>
 
   	  <div class="uk-container uk-container-center">
     	  <div class="uk-grid">
 		  <div class="uk-width-1-1">
+			  <a name="ambassadors-dinner"></a>
 			  <h2 class="uk-margin-large-top uk-text-center">Got dinner plans?</h2>
 			  <p>UIKonf is all about meeting new people. To make it easier for you to connect, we are introducing UIKonf ambassadors who will take a group of 8 people to a restaurant of their choice. (Everyone pays for themselves, though.) If you would like to be an ambassador for UIKonf, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdKUNdsBnbcZFYL8YQUfVXwKOM8ymJHTAyG5sQbcZ57zUCtcw/viewform" target="blank">please fill in this form</a>. Your response will be published immediately on this website.</p>
 			  <p>If you are interested in joining, there is no need to reach out to the ambassador beforehand (unless you are 100% sure you want to join). We will designate meeting points in the conference venue where you can meet on Monday evening.</p>
