Disable display of ambassadors (for now)

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ redirect_from:
 		  <div class="uk-width-1-1">
 			  <a name="ambassadors-dinner"></a>
 			  <h2 class="uk-margin-large-top uk-text-center">Got dinner plans?</h2>
-			  <p>UIKonf is all about meeting new people. To make it easier for you to connect, we are introducing UIKonf ambassadors who will take a group of 8 people to a restaurant of their choice. (Everyone pays for themselves, though.) If you would like to be an ambassador for UIKonf, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdKUNdsBnbcZFYL8YQUfVXwKOM8ymJHTAyG5sQbcZ57zUCtcw/viewform" target="blank">please fill in this form</a>. Your response will be published immediately on this website.</p>
+			  <p>UIKonf is all about meeting new people. To make it easier for you to connect, we are introducing UIKonf ambassadors who will take a group of 8 people to a restaurant of their choice. (Everyone pays for themselves, though.) If you would like to be an ambassador for UIKonf, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdKUNdsBnbcZFYL8YQUfVXwKOM8ymJHTAyG5sQbcZ57zUCtcw/viewform" target="blank">please fill in this form</a>. Your response will later appear below.</p>
 			  <p>If you are interested in joining, there is no need to reach out to the ambassador beforehand (unless you are 100% sure you want to join). We will designate meeting points in the conference venue where you can meet on Monday evening.</p>
 		  </div>
 	  </div>
@@ -185,8 +185,7 @@ redirect_from:
 </div>
 
 
-
-<script type="text/javascript" charset="utf-8">
+<!-- <script type="text/javascript" charset="utf-8">
 	function getJSONP(url, success) {
 
 	    var ud = '_' + +new Date,
@@ -242,8 +241,7 @@ redirect_from:
 	}
 	getJSONP('https://script.google.com/macros/s/AKfycbzQ4Zoaue0GNDWxkaXbHbmIukdHMJ8OrOXaA_alPJWqipB5Zg4/exec?prefix=parseResponse', function(data){});
 	
-</script>
-
+</script> -->
 
 
 	  
